Replaced the findPeakTimeWindow algorithm considering time complexity and added more test cases