@@ -42,6 +42,27 @@ import static com.eatclub.deal.mock.data.DealMockData.DEAL_6_LIGHTNING;
 import static com.eatclub.deal.mock.data.DealMockData.DEAL_6_OBJECT_ID;
 import static com.eatclub.deal.mock.data.DealMockData.DEAL_6_OPEN;
 import static com.eatclub.deal.mock.data.DealMockData.DEAL_6_QTY_LEFT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_CLOSE;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_DINE_IN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_DISCOUNT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_LIGHTNING;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_OBJECT_ID;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_OPEN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_7_QTY_LEFT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_CLOSE;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_DINE_IN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_DISCOUNT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_LIGHTNING;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_OBJECT_ID;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_OPEN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_8_QTY_LEFT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_CLOSE;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_DINE_IN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_DISCOUNT;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_LIGHTNING;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_OBJECT_ID;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_OPEN;
+import static com.eatclub.deal.mock.data.DealMockData.DEAL_9_QTY_LEFT;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_1_ADDRESS_1;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_1_CLOSE;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_1_NAME;
@@ -60,6 +81,12 @@ import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_3_NAME;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_3_OBJECT_ID;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_3_OPEN;
 import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_3_SUBURB;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_ADDRESS_1;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_CLOSE;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_NAME;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_OBJECT_ID;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_OPEN;
+import static com.eatclub.deal.mock.data.DealMockData.RESTAURANT_4_SUBURB;
 import static com.eatclub.deal.mock.data.DealMockData.mockDeal;
 import static com.eatclub.deal.mock.data.DealMockData.mockRestaurant;
 import static com.eatclub.deal.mock.data.DealMockData.mockRestaurants;
@@ -123,17 +150,17 @@ class DealServiceTest {
     DealsResponse result = dealService.getDeals(null);
 
     // assert deal 1 data
-    assertEquals(restaurant1.getObjectId(), result.getDeals().get(0).getRestaurantObjectId());
-    assertEquals(restaurant1.getName(), result.getDeals().get(0).getRestaurantName());
-    assertEquals(restaurant1.getAddress1(), result.getDeals().get(0).getRestaurantAddress1());
-    assertEquals(restaurant1.getSuburb(), result.getDeals().get(0).getRestaurantSuburb());
-    assertEquals(restaurant1.getOpen(), result.getDeals().get(0).getRestaurantOpen());
-    assertEquals(restaurant1.getClose(), result.getDeals().get(0).getRestaurantClose());
-    assertEquals(deal1.getObjectId(), result.getDeals().get(0).getDealObjectId());
-    assertEquals(deal1.getDiscount(), result.getDeals().get(0).getDiscount());
-    assertEquals(deal1.getDineIn(), result.getDeals().get(0).getDineIn());
-    assertEquals(deal1.getLightning(), result.getDeals().get(0).getLightning());
-    assertEquals(deal1.getQtyLeft(), result.getDeals().get(0).getQtyLeft());
+    assertEquals(restaurant1.getObjectId(), result.getDeals().getFirst().getRestaurantObjectId());
+    assertEquals(restaurant1.getName(), result.getDeals().getFirst().getRestaurantName());
+    assertEquals(restaurant1.getAddress1(), result.getDeals().getFirst().getRestaurantAddress1());
+    assertEquals(restaurant1.getSuburb(), result.getDeals().getFirst().getRestaurantSuburb());
+    assertEquals(restaurant1.getOpen(), result.getDeals().getFirst().getRestaurantOpen());
+    assertEquals(restaurant1.getClose(), result.getDeals().getFirst().getRestaurantClose());
+    assertEquals(deal1.getObjectId(), result.getDeals().getFirst().getDealObjectId());
+    assertEquals(deal1.getDiscount(), result.getDeals().getFirst().getDiscount());
+    assertEquals(deal1.getDineIn(), result.getDeals().getFirst().getDineIn());
+    assertEquals(deal1.getLightning(), result.getDeals().getFirst().getLightning());
+    assertEquals(deal1.getQtyLeft(), result.getDeals().getFirst().getQtyLeft());
 
     // assert deal 2 data
     assertEquals(restaurant1.getObjectId(), result.getDeals().get(1).getRestaurantObjectId());
@@ -183,17 +210,17 @@ class DealServiceTest {
     DealsResponse result = dealService.getDeals(1530);
 
     // assert deal 1 data
-    assertEquals(restaurant1.getObjectId(), result.getDeals().get(0).getRestaurantObjectId());
-    assertEquals(restaurant1.getName(), result.getDeals().get(0).getRestaurantName());
-    assertEquals(restaurant1.getAddress1(), result.getDeals().get(0).getRestaurantAddress1());
-    assertEquals(restaurant1.getSuburb(), result.getDeals().get(0).getRestaurantSuburb());
-    assertEquals(restaurant1.getOpen(), result.getDeals().get(0).getRestaurantOpen());
-    assertEquals(restaurant1.getClose(), result.getDeals().get(0).getRestaurantClose());
-    assertEquals(deal1.getObjectId(), result.getDeals().get(0).getDealObjectId());
-    assertEquals(deal1.getDiscount(), result.getDeals().get(0).getDiscount());
-    assertEquals(deal1.getDineIn(), result.getDeals().get(0).getDineIn());
-    assertEquals(deal1.getLightning(), result.getDeals().get(0).getLightning());
-    assertEquals(deal1.getQtyLeft(), result.getDeals().get(0).getQtyLeft());
+    assertEquals(restaurant1.getObjectId(), result.getDeals().getFirst().getRestaurantObjectId());
+    assertEquals(restaurant1.getName(), result.getDeals().getFirst().getRestaurantName());
+    assertEquals(restaurant1.getAddress1(), result.getDeals().getFirst().getRestaurantAddress1());
+    assertEquals(restaurant1.getSuburb(), result.getDeals().getFirst().getRestaurantSuburb());
+    assertEquals(restaurant1.getOpen(), result.getDeals().getFirst().getRestaurantOpen());
+    assertEquals(restaurant1.getClose(), result.getDeals().getFirst().getRestaurantClose());
+    assertEquals(deal1.getObjectId(), result.getDeals().getFirst().getDealObjectId());
+    assertEquals(deal1.getDiscount(), result.getDeals().getFirst().getDiscount());
+    assertEquals(deal1.getDineIn(), result.getDeals().getFirst().getDineIn());
+    assertEquals(deal1.getLightning(), result.getDeals().getFirst().getLightning());
+    assertEquals(deal1.getQtyLeft(), result.getDeals().getFirst().getQtyLeft());
 
     // assert deal 3 data
     assertEquals(restaurant2.getObjectId(), result.getDeals().get(1).getRestaurantObjectId());
@@ -234,7 +261,7 @@ class DealServiceTest {
   }
 
   @Test
-  void whenGetPeakTime_thenOnlyOnePeakExistsAndReturned() {
+  void whenGetPeakTimeWithSinglePeak_thenOnePeakReturned() {
     Deal deal1 = mockDeal(DEAL_1_OBJECT_ID, DEAL_1_DISCOUNT, DEAL_1_DINE_IN, DEAL_1_OPEN, DEAL_1_CLOSE,
         DEAL_1_LIGHTNING, DEAL_1_QTY_LEFT);
     Deal deal2 = mockDeal(DEAL_2_OBJECT_ID, DEAL_2_DISCOUNT, DEAL_2_DINE_IN, DEAL_2_OPEN, DEAL_2_CLOSE,
@@ -260,7 +287,7 @@ class DealServiceTest {
   }
 
   @Test
-  void whenGetPeakTime_thenMultiplePeaksExistAndLongestPeakReturned() {
+  void whenGetPeakTimeWithMultiplePeaksOfSameValue_thenLongestPeakReturned() {
     Deal deal1 = mockDeal(DEAL_1_OBJECT_ID, DEAL_1_DISCOUNT, DEAL_1_DINE_IN, DEAL_1_OPEN, DEAL_1_CLOSE,
         DEAL_1_LIGHTNING, DEAL_1_QTY_LEFT);
     Deal deal2 = mockDeal(DEAL_2_OBJECT_ID, DEAL_2_DISCOUNT, DEAL_2_DINE_IN, DEAL_2_OPEN, DEAL_2_CLOSE,
@@ -288,6 +315,65 @@ class DealServiceTest {
     PeakTimeResponse result = dealService.getPeakTime();
 
     assertEquals("6:00pm", result.getPeakTimeStart());
+    assertEquals("8:00pm", result.getPeakTimeEnd());
+  }
+
+  @Test
+  void whenGetPeakTimeWithMultiplePeaks_thenHighestButNotLongestPeakReturned() {
+    Deal deal1 = mockDeal(DEAL_1_OBJECT_ID, DEAL_1_DISCOUNT, DEAL_1_DINE_IN, DEAL_1_OPEN, DEAL_1_CLOSE,
+        DEAL_1_LIGHTNING, DEAL_1_QTY_LEFT);
+    Deal deal2 = mockDeal(DEAL_2_OBJECT_ID, DEAL_2_DISCOUNT, DEAL_2_DINE_IN, DEAL_2_OPEN, DEAL_2_CLOSE,
+        DEAL_2_LIGHTNING, DEAL_2_QTY_LEFT);
+    Deal deal3 = mockDeal(DEAL_3_OBJECT_ID, DEAL_3_DISCOUNT, DEAL_3_DINE_IN, DEAL_3_OPEN, DEAL_3_CLOSE,
+        DEAL_3_LIGHTNING, DEAL_3_QTY_LEFT);
+    Deal deal4 = mockDeal(DEAL_4_OBJECT_ID, DEAL_4_DISCOUNT, DEAL_4_DINE_IN, DEAL_4_OPEN, DEAL_4_CLOSE,
+        DEAL_4_LIGHTNING, DEAL_4_QTY_LEFT);
+    Deal deal5 = mockDeal(DEAL_5_OBJECT_ID, DEAL_5_DISCOUNT, DEAL_5_DINE_IN, DEAL_5_OPEN, DEAL_5_CLOSE,
+        DEAL_5_LIGHTNING, DEAL_5_QTY_LEFT);
+    Deal deal6 = mockDeal(DEAL_6_OBJECT_ID, DEAL_6_DISCOUNT, DEAL_6_DINE_IN, DEAL_6_OPEN, DEAL_6_CLOSE,
+        DEAL_6_LIGHTNING, DEAL_6_QTY_LEFT);
+
+    Deal deal7 = mockDeal(DEAL_7_OBJECT_ID, DEAL_7_DISCOUNT, DEAL_7_DINE_IN, DEAL_7_OPEN, DEAL_7_CLOSE,
+        DEAL_7_LIGHTNING, DEAL_7_QTY_LEFT);
+    Deal deal8 = mockDeal(DEAL_8_OBJECT_ID, DEAL_8_DISCOUNT, DEAL_8_DINE_IN, DEAL_8_OPEN, DEAL_8_CLOSE,
+        DEAL_8_LIGHTNING, DEAL_8_QTY_LEFT);
+    Deal deal9 = mockDeal(DEAL_9_OBJECT_ID, DEAL_9_DISCOUNT, DEAL_9_DINE_IN, DEAL_9_OPEN, DEAL_9_CLOSE,
+        DEAL_9_LIGHTNING, DEAL_9_QTY_LEFT);
+
+    Restaurant restaurant1 = mockRestaurant(RESTAURANT_1_OBJECT_ID, RESTAURANT_1_NAME, RESTAURANT_1_ADDRESS_1,
+        RESTAURANT_1_SUBURB, RESTAURANT_1_OPEN, RESTAURANT_1_CLOSE, List.of(deal1, deal2));
+    Restaurant restaurant2 = mockRestaurant(RESTAURANT_2_OBJECT_ID, RESTAURANT_2_NAME, RESTAURANT_2_ADDRESS_1,
+        RESTAURANT_2_SUBURB, RESTAURANT_2_OPEN, RESTAURANT_2_CLOSE, List.of(deal3, deal4));
+    Restaurant restaurant3 = mockRestaurant(RESTAURANT_3_OBJECT_ID, RESTAURANT_3_NAME, RESTAURANT_3_ADDRESS_1,
+        RESTAURANT_3_SUBURB, RESTAURANT_3_OPEN, RESTAURANT_3_CLOSE, List.of(deal5, deal6));
+    Restaurant restaurant4 = mockRestaurant(RESTAURANT_4_OBJECT_ID, RESTAURANT_4_NAME, RESTAURANT_4_ADDRESS_1,
+        RESTAURANT_4_SUBURB, RESTAURANT_4_OPEN, RESTAURANT_4_CLOSE, List.of(deal7, deal8, deal9));
+
+    Restaurants restaurants = mockRestaurants(List.of(restaurant1, restaurant2, restaurant3, restaurant4));
+
+    when(restaurantRestClient.getData(any())).thenReturn(restaurants);
+
+    PeakTimeResponse result = dealService.getPeakTime();
+
+    assertEquals("4:30pm", result.getPeakTimeStart());
+    assertEquals("5:00pm", result.getPeakTimeEnd());
+  }
+
+  @Test
+  void whenGetPeakTimeWithSingleDeal_thenEntireDealDurationAsPeakReturned() {
+    Deal deal1 = mockDeal(DEAL_1_OBJECT_ID, DEAL_1_DISCOUNT, DEAL_1_DINE_IN, DEAL_1_OPEN, DEAL_1_CLOSE,
+        DEAL_1_LIGHTNING, DEAL_1_QTY_LEFT);
+
+    Restaurant restaurant1 = mockRestaurant(RESTAURANT_1_OBJECT_ID, RESTAURANT_1_NAME, RESTAURANT_1_ADDRESS_1,
+        RESTAURANT_1_SUBURB, RESTAURANT_1_OPEN, RESTAURANT_1_CLOSE, List.of(deal1));
+
+    Restaurants restaurants = mockRestaurants(List.of(restaurant1));
+
+    when(restaurantRestClient.getData(any())).thenReturn(restaurants);
+
+    PeakTimeResponse result = dealService.getPeakTime();
+
+    assertEquals("3:00pm", result.getPeakTimeStart());
     assertEquals("8:00pm", result.getPeakTimeEnd());
   }
 
